fix: create flex to box and add gap

--- a/src/components/Posts/_style.scss
+++ b/src/components/Posts/_style.scss
@@ -1,7 +1,6 @@
 @use "../../styles/variables" as *;
 
 .posts{
-  margin-top: 4.5rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
