--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,6 +28,9 @@ img{
   padding: 0 2rem;
   position: relative;
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 4.5rem;
 }
 
 .container {
